# nonebot-plugin-wordle-simple

./: AnswerDictionary.txt  GuessDictionary.txt  README.md  __init__.py  get_translate.py  pyproject.toml
nonebot_plugin_wordle_simple/: AnswerDictionary.txt  __init__.py  config.py  get_translate.py  img.py
