[tool.poetry]
name = "nonebot-plugin-wordle-simple"
version = "0.0.5"
description = "一个简单的没有次数限制的猜词游戏 (Wordle) 插件"
authors = ["shiyihang2007 <467557146@qq.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "nonebot_plugin_wordle_simple"}]
homepage = "https://github.com/shiyihang2007/nonebot-plugin-wordle-simple"
repository = "https://github.com/shiyihang2007/nonebot-plugin-wordle-simple"
documentation = "https://github.com/shiyihang2007/nonebot-plugin-wordle-simple"

# [[tool.poetry.source]]
# name = "tsinghua"
# url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
# default = true

[tool.poetry.dependencies]
python = ">=3.10"
nonebot2 = ">=2.0.0rc1"
nonebot-adapter-onebot = ">=2.4.4"
pillow = ">=10.4.0"
httpx = ">=0.27.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
